--- a/publication.html
+++ b/publication.html
@@ -156,7 +156,7 @@
                                                     </div>
 
                                                     <h4 class="pubtitle"> Implanted Nerve Electrical Stimulation allows to Selectively Restore Hand and Forearm Movements in Patients with a Complete Tetraplegia</h4>
-                                                    <div class="pubauthor">Tigra W., Azevedo C., Teissier J., Gelis A., Coulet B., Divoux JL., Guiraud D.</div>
+                                                    <div class="pubauthor">Tigra W., Teissier J., Gelis A., Coulet B., Divoux JL.</div>
                                                     <div class="pubcite"><span class="label label-successprogress">Journal Paper</span> <b>Pre-print</b></div>
 
                                                   <div class="pubdetails">
@@ -301,7 +301,8 @@
                                                       </a>
                                                     </div>
 
-                                                    <h4 class="pubtitle">Projet Agilis : Restaurer des mouvements de préhension chez le sujet tetraplégique parstimulation électrique implantée</h4>
+                                                    <h4 class="pubtitle">Projet Agilis : Restaurer des mouvements de préhension chez le sujet tetraplégique par
+stimulation électrique implantée</h4>
                                                     <div class="pubauthor">Tigra W.</div>
                                                     <div class="pubcite"><span class="label label-danger">National symposium</span> <b>Institut du Mouvement Humain et Cybernétique, Novembre 2016, Montpellier, France</b></div>
 
