--- a/publication.html
+++ b/publication.html
@@ -157,7 +157,7 @@
 
                                                     <h4 class="pubtitle"> Implanted Nerve Electrical Stimulation allows to Selectively Restore Hand and Forearm Movements in Patients with a Complete Tetraplegia</h4>
                                                     <div class="pubauthor">Tigra W., Teissier J., Gelis A., Coulet B., Divoux JL.</div>
-                                                    <div class="pubcite"><span class="label label-successprogress">Journal Paper</span> <b>Pre-print</b></div>
+                                                    <div class="pubcite"><span class="label label-successprogress">Journal Paper</span> <b>Pre-print on BioRxiv</b></div>
 
                                                   <div class="pubdetails">
                                                     <h4>Abstract</h4>
