--- a/publication.html
+++ b/publication.html
@@ -156,7 +156,7 @@
                                                     </div>
 
                                                     <h4 class="pubtitle"> Implanted Nerve Electrical Stimulation allows to Selectively Restore Hand and Forearm Movements in Patients with a Complete Tetraplegia</h4>
-                                                    <div class="pubauthor">Tigra W., Teissier J., Gelis A., Coulet B., Divoux JL.</div>
+                                                    <div class="pubauthor">Tigra W., Azevedo C., Teissier J., Gelis A., Coulet B., Divoux JL., Guiraud D.</div>
                                                     <div class="pubcite"><span class="label label-successprogress">Journal Paper</span> <b>Pre-print on BioRxiv</b></div>
 
                                                   <div class="pubdetails">
