--- a/publication.html
+++ b/publication.html
@@ -72,7 +72,7 @@
                           
                                                     
 
-                            <div id="copyright">Wafa Tigra - 2018</div>
+                            <div id="copyright">Wafa Tigra - 2019</div>
 
                         </div>
                         <!-- /Sidebar footer -->
@@ -294,7 +294,8 @@
                                                       </a>
                                                     </div>
 
-                                                    <h4 class="pubtitle">Projet Agilis: Stimulation electrique nerveuse implantée et signaux sEMGsus-lésionnels pour la restauration sélective et le contrôle de mouvements de main et d'avant-bras chez des patients présentant une tétraplégie complète</h4>
+                                                    <h4 class="pubtitle">Projet Agilis: Stimulation electrique nerveuse implantée et signaux sEMG
+sus-lésionnels pour la restauration sélective et le contrôle de mouvements de main et d'avant-bras chez des patients présentant une tétraplégie complète</h4>
                                                     <div class="pubauthor">Tigra W.</div>
                                                     <div class="pubcite"><span class="label label-danger">Acte</span> <b>IFRATH, Journée des Jeunes Chercheurs, intervenante en tant que lauréate du prix de thèse Handicap IFRATH 2017 (premier prix), Juin 2019, Paris, France</b></div>
 
@@ -317,7 +318,8 @@
                                                       </a>
                                                     </div>
 
-                                                    <h4 class="pubtitle">Projet Agilis : Restaurer des mouvements de préhension chez le sujet tetraplégique parstimulation électrique implantée</h4>
+                                                    <h4 class="pubtitle">Projet Agilis : Restaurer des mouvements de préhension chez le sujet tetraplégique par
+stimulation électrique implantée</h4>
                                                     <div class="pubauthor">Tigra W.</div>
                                                     <div class="pubcite"><span class="label label-danger">National symposium</span> <b>Institut du Mouvement Humain et Cybernétique, Novembre 2016, Montpellier, France</b></div>
 
